<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SettingActivity_SetPassword"
        android:textSize="@dimen/Setting_Password_Dialog_TitleSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreen" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:gravity="center"
                android:text="@string/SettingActivity_OldPassword"
                android:textSize="@dimen/Setting_Password_Dialog_TextSize" />

            <EditText
                android:id="@+id/Setting_OldPassword_Edit"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="center"
                android:text="@string/SettingActivity_NewPassword"
                android:textSize="@dimen/Setting_Password_Dialog_TextSize" />

            <EditText
                android:id="@+id/Setting_NewPassword_Edit"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/SettingActivity_ConfirmPassword"
                android:textSize="@dimen/Setting_Password_Dialog_TextSize" />

            <EditText
                android:id="@+id/Setting_ConfirmPassword_Edit"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Setting_Password_Sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Transparent"
            android:text="@string/SettingActivity_Ensure" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGreen" />

        <Button
            android:id="@+id/Setting_Password_Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Transparent"
            android:text="@string/SettingActivity_Cancel" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreen" />

</LinearLayout>